# rules-template

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  WORKSPACE.bazel  internal_deps.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  buildifier.yaml  ci.bazelrc  ci.yaml  conventional-commits.yaml  publish.yaml  release.yaml  release.yml  release_prep.sh  tag.yaml  workspace_snippet.sh
dart/: BUILD.bazel  defs.bzl  repositories.bzl
dart/private/: BUILD.bazel  binary.bzl  toolchains_repo.bzl  versions.bzl  vm_binary.bzl
dart/tests/: versions_test.bzl
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/workspace/: BUILD  WORKSPACE
e2e/workspace/dart_binary/: BUILD  example.dart  example_test.sh
integration_tests/: BUILD.bazel
integration_tests/smoke_test/: WORKSPACE
mylang/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
mylang/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
mylang/tests/: versions_test.bzl
mylang/toolchain/: BUILD.bazel
tools/: BUILD.bazel  preset.bazelrc
