bazel_dep(name = "com_myorg_rules_mylang", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "com_myorg_rules_mylang",
    path = "../..",
)

mylang = use_extension("@com_myorg_rules_mylang//mylang:extensions.bzl", "mylang")
mylang.toolchain(mylang_version = "1.14.2")
use_repo(mylang, "mylang_toolchains")

register_toolchains("@mylang_toolchains//:all")
