"""
These are the targets rule authors should put in their "toolchains"
attribute in order to get a runtime for the correct platform.
See https://docs.bazel.build/versions/main/toolchains.html
"""

package(default_visibility = ["//visibility:public"])

# Resolve the mylang tool for the execution platform.
toolchain_type(name = "execution_type")

# Less frequently needed: give a diff tool for the target platform.
toolchain_type(name = "target_type")
